--- a/Makefile.tmpl
+++ b/Makefile.tmpl
@@ -1,3 +1,5 @@
+# XXX THIS FILE IS ON THE WAY OUT, DON'T TAKE IT TOO SERIOUSLY!!! XXX
+
 # these are variables that are defined in the config file. they can be over-
 # written at run time by setting an environment variable with the SUPERSMART
 # prefix, e.g. conf.MYSQL_BIN becomes SUPERSMART_MYSQL_BIN
