viz using onezoom and jsphylosvg now available (#38)

--- a/data/VISUALIZATION/onezoom.tmpl
+++ b/data/VISUALIZATION/onezoom.tmpl
@@ -43,7 +43,7 @@ This software has been tested on the latest versions of safari (Mac), Google Chr
     function userdata()
 	{
 		// edit this line to change the default data
-		fulltree = new midnode("[% GET tree %]");
+		fulltree = new midnode("[% tree.to_newick %]");
 	}
 
 	// default viewing options (can be changed with buttons when running)
