--- a/data/VISUALIZATION/supersmart.tmpl
+++ b/data/VISUALIZATION/supersmart.tmpl
@@ -8,14 +8,15 @@
 		
 			// draw the node if internal
 			if ( node.children.length != 0 ) {
+				var nodeColor = node.fossil ? 'black' : 'white';
 				drawCircle(
 					svg,
 					node['map:x'],
 					node['map:y'],
 					node['map:radius'] || 8,
 					{
-						'fill'         : node['map:node_color'],
-						'stroke'       : node['map:node_outline_color'],
+						'fill'         : nodeColor,
+						'stroke'       : node['map:branch_color'],
 						'stroke-width' : node['map:branch_width'],
 						'cursor'       : 'pointer'		
 					}
@@ -29,21 +30,31 @@
 					'stroke-width' : node['map:branch_width'] || 2,
 				};
 				drawLine(svg,parent['map:x'],parent['map:y'],parent['map:x'],node['map:y'],branchStyle);
-				drawLine(svg,parent['map:x'],node['map:y'],node['map:x'],node['map:y'],branchStyle);			
+				drawLine(svg,parent['map:x'],node['map:y'],node['map:x'],node['map:y'],branchStyle);
+				
+				// overlay black dotted line if backbone
+				if ( node.backbone ) {
+					branchStyle['stroke'] = 'black';
+					branchStyle['stroke-dasharray'] = '5, 5';
+					drawLine(svg,parent['map:x'],parent['map:y'],parent['map:x'],node['map:y'],branchStyle);
+					drawLine(svg,parent['map:x'],node['map:y'],node['map:x'],node['map:y'],branchStyle);				
+				}			
 			}
 			
-			// if node has a label, draw it
+			// if node has a label, draw it. make bold if exemplar.
 			if ( node.name != null ) {
+				var fontWeight = node.exemplar ? 'bold' : 'normal';
 				drawText(
 					svg,
 					node['map:x'] + ( node['map:text_horiz_offset'] || 12 ),
 					node['map:y'] + ( node['map:text_vert_offset']  || 3 ),
 					node.name,
 					{
+						'stroke'      : node['map:font_color'],					
 						'font-family' : node['map:font_face']  || 'Verdana',
 						'font-size'   : node['map:font_size']  || '10px',
 						'font-style'  : node['map:font_style'] || 'italic',
-						'stroke'      : node['map:font_color'],
+						'font-weight' : fontWeight,
 					}
 				);
 			}
