[skip ci] prevent from throwing errors

--- a/data/VISUALIZATION/supersmart.tmpl
+++ b/data/VISUALIZATION/supersmart.tmpl
@@ -10,13 +10,13 @@
         -->
         <script type="text/javascript">
             // jQuery
-            // [% INSERT jquery-2.1.4.min.js %]
+            // [% INSERT 'jquery-2.1.4.min.js' %]
 
             // tree visualization library
-            // [% INSERT treeviz.js %]
+            // [% INSERT 'treeviz.js' %]
 
             // tree object library
-            // [% INSERT treelib.js %]
+            // [% INSERT 'treelib.js' %]
 
         </script>
         <style type="text/css">
